--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,22 +1,8 @@
-
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+body {
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
